[tool.poetry]
name = "indicator-recomendation-system"
version = "0.1.0"
description = ""
authors = ["Eber <laurente.eber@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23"
pandas = "^1.5.1"
seaborn = "^0.12.1"
matplotlib = "^3.6.0"
empiricaldist = "^0.6.7"
statsmodels = "^0.13.5"
scikit-learn = "^1.1.2"
pyjanitor = "^0.23.1"
openpyxl = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 